# Jao-Financas

financas/: main.py  pyproject.toml
financas-back/: main.py  pyproject.toml
financas-back/auth/: auth.py  m2f.py
financas-back/controller/: categoria_controller.py  conta_bancaria_controller.py  transacao_controller  transacao_controller.py
financas-back/database/: db.py  models.py
financas-back/setup/: settings.py
financas/auth/: auth.py
financas/controller/: conta_bancaria_controller.py
financas/database/: db.py  models.py
financas/setup/: settings.py
