[project]
name = "financas-back"
version = "0.1.0"
description = ""
authors = [
    {name = "malf75",email = "malfbf6@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard] (>=0.115.8,<0.116.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "sqlmodel (>=0.0.22,<0.0.23)",
    "python-jose (>=3.3.0,<4.0.0)",
    "bcrypt (>=4.2.1,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
